compiler-skeleton/tests/parse-error/parse_oper_compair.ln
a:bool;
b:bool;
c:int;
d:int;


a = c << b;

b = c >> d;

a = c <<= d;

a = c >>= d;

a = a === b;